site: fix wizard box spacing

--- a/site/MVC/Assets/styles/wizard.css
+++ b/site/MVC/Assets/styles/wizard.css
@@ -21,8 +21,8 @@
 	z-index: 20;
 }
 
-.move-down {
-	margin-top: 125px;
+.below-wizard-box {
+	height: 100px;
 }
 
 @media (min-width:768px) {
